Fix font overflow on responsive page

--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,7 @@ html {
 }
 .left .title {
   font-family: "Gasoek One";
-  font-size: 70px;
+  font-size: 50px;
   padding: 20px;
 }
 .right {
@@ -174,5 +174,8 @@ html {
     .left,
 .right{
     width: 100%;
+}
+.left .title{
+  font-size: 30px;
 }
 }
